[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-flosse"
version = "0.2.0"
description = "Dead-simple Server-Sent Events for Django via a single decorator."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Youssuf Shakweh" }]
keywords = [
    "django",
    "sse",
    "server-sent-events",
    "streaming",
    "http-streaming",
    "real-time",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]
dependencies = ["django>=4.2"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-django", "pytest-cov"]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]",
    "termynal",
]

dev = ["django-flosse[test,docs]", "ruff", "pre-commit"]

[project.urls]
Homepage = "https://github.com/youssufshakweh/django-flosse"
Repository = "https://github.com/youssufshakweh/django-flosse"
Changelog = "https://github.com/youssufshakweh/django-flosse/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/youssufshakweh/django-flosse/issues"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
asyncio_mode = "auto"
addopts = [
    "--cov=django_flosse",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.hatch.build.targets.wheel]
packages = ["django_flosse"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Python version targeting
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
